--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "start" : "node app.js"
+  "start" : "node app.js",
   "name": "primerparcialpw2",
   "version": "1.0.0",
   "description": "",
