--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "start" : "node app.js",
   "name": "primerparcialpw2",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "scripts": {
+    "start": "node app.js",
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
